--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"ip":"DarkXd999F9VT.aternos.me","name":"Afk","port":"30088"}
+{"ip":"DarkXd999F9VT.aternos.me","name":"FlameTrident7352","port":"30088"}
